--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "csv-parse": "^5.3.6",
+    "d3": "^7.8.3",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
